--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
+
 <html>
     <head>
-        <title>Recognizing animals by voice</title>
-        <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js" type="text/javascript"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"></link>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="style.css">
-        <script src="main.js"></script>
+      <title>Sound Identification Web App</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
+      <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
+      <link rel="stylesheet" type="text/css" href="style.css">
     </head>
+  
     <body>
+      <div class="main_div">
         <center>
             <h2>Recognizing animals by voice
                 <br><span id="note">Note : This webapp is desisned to recognize meowing, barking, mooing, and roaring.</span>
             </h2><br>
-            <button onclick="start()" class="btn btn-success" id="startbtn">S T A R T</button><br>
-            <h3 id="Result">Dectected Voice : </h3>
-            <div id="resultpic"><img width="600" height="600" src="ear.png"></div>
-            <div class="bottom"><h3>Developed By -  Rakshit Malik</h3>
+          <br>
+          <button class="btn btn-info" onclick="startClassifictaion()">S T A R T</button>
+          <h3 id="detected"> </h3>
+          <h4 id="voice">I Can Hear - </h4>
+          <img src="https://shravaripatil.github.io/Sound_controlled_animals/listen.gif" id="image" width="300" height="300">
         </center>
+        </div>
+        <div class="bottom">
+            Developed By - Whitehat JR Team
+        </div>
+  <script src="main.js"></script>
     </body>
-</html>
+  </html>
